# GPRM

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  env_vars.sh  rebuild.sh  requirements.txt  server.py
appendix/: gprm_ablation.md
benchmarks/test/: 0.dot  1.dot  10.dot  100.dot  101.dot  102.dot  103.dot  104.dot  105.dot  106.dot  107.dot  108.dot  109.dot  11.dot  110.dot  111.dot  112.dot  113.dot  114.dot  115.dot  116.dot  117.dot  118.dot  119.dot  12.dot  120.dot  121.dot  122.dot  123.dot  124.dot  125.dot  126.dot  127.dot  128.dot  129.dot  13.dot  130.dot  131.dot  132.dot  133.dot  (+949 more)
cli/: balance_graphs_from_dir.py  change_ops.py  clean_disconnected_graphs.py  clean_edge_for_node_geq_five_neighs.py  clean_isomorphic_graphs_with_name_arg.py  clean_smaller_diconnected_graphs.py  gen_graph_stats.py  generate_dfg_histogram.py  generate_dot_images_from_dir.py  plot_cdf.py  prune_graphs_from_dir.py  remove_self_loops.py
experiments/configs/: configs.hpp
experiments/mapping_representation_learning/: mrl_configs.hpp  run_gprm_ablation.cpp  run_gprm_mrl_exp.cpp  run_mapzero_mrl_exp.cpp  run_smartmap_mrl_exp.cpp  run_transmap_mrl_exp.cpp
experiments/utils/: exp_utils.hpp
scripts/: aug_and_save_mappings.cpp  filter_dfgs.cpp  map_with_zero_shot.cpp  save_supervised_data_in_blocks_gprm.cpp  single_zero_shot_mapping.cpp  split_dataset.cpp
src/cpp/rl/: base_state.cpp
src/cpp/utils/: laplacian.cpp  mapping_augmentation.cpp  mcts.cpp  min_max_stats.cpp  util_args.cpp  util_dfg.cpp  util_graph.cpp  util_placement.cpp  util_print.cpp  util_server.cpp  util_torch.cpp  util_train.cpp
src/hpp/: context_holder.hpp  launcher.hpp  pch.hpp  rng_singleton.hpp
src/hpp/configs/: buffer_config.hpp  cgra_config.hpp  dfg_config.hpp  global_config.hpp  launcher_config.hpp  mapping_config.hpp  mcts_config.hpp  path_config.hpp  ppo_config.hpp  rl_config.hpp  state_config.hpp  train_config.hpp
src/hpp/datasets/: mapping_dataset.hpp
src/hpp/enums/: enum_curriculum.hpp  enum_curriculum_progress.hpp  enum_data_augmenter.hpp  enum_end_state.hpp  enum_env_sampler.hpp  enum_environment.hpp  enum_functionalities.hpp  enum_greedy_type.hpp  enum_interconnection_styles.hpp  enum_invalid_mapping_reason.hpp  enum_model.hpp  enum_nomalization.hpp  enum_operation.hpp  enum_optimizer.hpp  enum_placement_approach.hpp  enum_replay_buffer.hpp  enum_scheduling.hpp  enum_self_mapping.hpp  enum_task_type.hpp  enum_training.hpp
src/hpp/losses/: mapzero_mcts_loss.hpp  policy_gradient_loss.hpp
src/hpp/rl/: base_state.hpp  beam_search_self_mapping.hpp  collate.hpp  curriculum_progress.hpp  data_augmenter.hpp  env_sampler.hpp  environment.hpp  map_curriculum_learning.hpp  mapping_history.hpp  node.hpp  policy_logits_self_mapping.hpp  reanalyze.hpp  self_mapping.hpp
src/hpp/utils/: batch_requester.hpp  csv_mapping_writer.hpp  graph_cleaner.hpp  hashes.hpp  mapping_augmentation.hpp  mcts.hpp  min_max_stats.hpp  util_args.hpp  util_checkpoint.hpp  util_dfg.hpp  util_graph.hpp  util_infer.hpp  util_mcts.hpp  util_placement.hpp  util_print.hpp  util_scripts.hpp  util_serialize.hpp  util_server.hpp  util_torch.hpp  util_train.hpp
src/hpp/variants/: global_config_variant.hpp
src/python/: laplacian.py  launcher.py  receiver.py  sender.py  server_utils.py  train_config.py
src/python/constants/: server_constants.py
src/python/datasets/: smartmap_dataset.py  target_dataset.py
src/python/models/: categorical_mask.py  favor_plus_attention.py  general_policy_net.py  graph_embedding_generation.py  mapzero.py  mapzero_policy_net.py  smartmap.py  value_net.py
src/tpp/: launcher.tpp
src/tpp/configs/: global_config.tpp
src/tpp/datasets/: mapping_dataset.tpp
src/tpp/rl/: base_buffer.tpp  buffer.tpp  node.tpp  (+5 more)
(+75017 files in other folders)
